hw1 first try